--- a/.github/workflows/kubedeploy_adservice.yml
+++ b/.github/workflows/kubedeploy_adservice.yml
@@ -14,19 +14,22 @@ on:
     branches:
       - main
 
-env:
-  PROJECT_ID: ${{ secrets.GKE_PROJECT }}
-  GKE_CLUSTER: cluster-1    # Add your cluster name here.
-  GKE_ZONE: us-central1-c   # Add your cluster zone here.
-  DEPLOYMENT_NAME: gke-test # Add your deployment name here.
-  IMAGE: static-site
+permissions: 
+  id-token: write
+
+# env:
+#   PROJECT_ID: 
+#   GKE_CLUSTER: cluster-1    # Add your cluster name here.
+#   GKE_ZONE: us-central1-c   # Add your cluster zone here.
+#   DEPLOYMENT_NAME: gke-test # Add your deployment name here.
+
+
 
 jobs:
 
   setup-build-publish-deploy:
     name: Setup, Build, Publish, and Deploy
     runs-on: ubuntu-latest
-    environment: production
 
     steps:
     - name: Checkout
