--- a/.github/workflows/kubedeploy_adservice.yml
+++ b/.github/workflows/kubedeploy_adservice.yml
@@ -62,8 +62,7 @@ jobs:
    
     # # Configure Docker to use the gcloud command-line tool as a credential
     # # helper for authentication
-    # - run: |-
-    #     gcloud --quiet auth configure-docker
+
 
     # Get the GKE credentials so we can deploy to the cluster
     - uses: google-github-actions/get-gke-credentials@db150f2cc60d1716e61922b832eae71d2a45938f
@@ -80,7 +79,7 @@ jobs:
     #     file: ./ARCH-adservice/Dockerfile
     #     push: true
     #     tags: "gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA"
-    #     # labels: ${{ steps.meta.outputs.labels }}
+    #  labels:
 
     # - name: Build
     #   run: |-
