--- a/.github/workflows/kubedeploy_adservice.yml
+++ b/.github/workflows/kubedeploy_adservice.yml
@@ -62,7 +62,8 @@ jobs:
    
     # # Configure Docker to use the gcloud command-line tool as a credential
     # # helper for authentication
-
+    - run: |-
+        gcloud --quiet auth configure-docker
 
     # Get the GKE credentials so we can deploy to the cluster
     - uses: google-github-actions/get-gke-credentials@db150f2cc60d1716e61922b832eae71d2a45938f
@@ -79,7 +80,7 @@ jobs:
     #     file: ./ARCH-adservice/Dockerfile
     #     push: true
     #     tags: "gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA"
-    #  labels:
+    #  labels: ${{ steps.meta.outputs.labels }}
 
     # - name: Build
     #   run: |-
