--- a/.github/workflows/kubedeploy_adservice.yml
+++ b/.github/workflows/kubedeploy_adservice.yml
@@ -44,10 +44,10 @@ jobs:
         service_account: '${{ secrets.WIF_SERVICE_ACCOUNT }}'  
 
     # Setup gcloud CLI
-    - uses: google-github-actions/setup-gcloud@1bee7de035d65ec5da40a31f8589e240eba8fde5
-      with:
-        service_account_key: ${{ secrets.GKE_SA_KEY }}
-        project_id: ${{ secrets.GKE_PROJECT }}
+    # - uses: google-github-actions/setup-gcloud@1bee7de035d65ec5da40a31f8589e240eba8fde5
+    #   with:
+    #     service_account_key: {{ secrets.GKE_SA_KEY }}
+    #     project_id: {{ secrets.GKE_PROJECT }}
 
     - name: push to gcr   
       uses: RafikFarhad/push-to-gcr-github-action@v5-beta
