--- a/ARCH-adservice/Dockerfile
+++ b/ARCH-adservice/Dockerfile
@@ -19,11 +19,11 @@ WORKDIR /app
 COPY ["build.gradle", "gradlew", "./"]
 COPY gradle gradle
 RUN chmod +x gradlew
-RUN ./gradlew downloadRepos
+RUN gradlew downloadRepos
 
 COPY . .
 RUN chmod +x gradlew
-RUN ./gradlew installDist
+RUN gradlew installDist
 
 FROM openjdk:8-slim
 
