--- a/ARCH-adservice/Dockerfile
+++ b/ARCH-adservice/Dockerfile
@@ -16,7 +16,8 @@ FROM openjdk:8-slim as builder
 
 WORKDIR /app
 
-COPY ["build.gradle", "gradlew", "./"]
+COPY . .
+
 COPY gradle gradle
 RUN chmod +x gradlew
 RUN gradlew downloadRepos
