--- a/.github/workflows/deploy-kub.yaml
+++ b/.github/workflows/deploy-kub.yaml
@@ -44,6 +44,12 @@ jobs:
         workload_identity_provider: '${{ secrets.WIF_PROVIDER }}'
         service_account: '${{ secrets.WIF_SERVICE_ACCOUNT }}'
 
+        # # Configure Docker to use the gcloud command-line tool as a credential
+    # # helper for authentication
+    - run: |-
+        gcloud --quiet auth configure-docker
+        gcloud auth configure-docker europe-west1-docker.pkg.dev
+
     # Setup gcloud CLI
     # - uses: google-github-actions/setup-gcloud@1bee7de035d65ec5da40a31f8589e240eba8fde5
     #   with:
@@ -65,6 +71,7 @@ jobs:
     # # helper for authentication
     - run: |-
         gcloud --quiet auth configure-docker
+        gcloud auth configure-docker europe-west1-docker.pkg.dev
 
     # Get the GKE credentials so we can deploy to the cluster
     - uses: google-github-actions/get-gke-credentials@db150f2cc60d1716e61922b832eae71d2a45938f
