--- a/.github/workflows/deploy-kub.yaml
+++ b/.github/workflows/deploy-kub.yaml
@@ -48,7 +48,14 @@ jobs:
     # # helper for authentication
     - run: |-
         gcloud --quiet auth configure-docker
-        gcloud auth configure-docker europe-west1-docker.pkg.dev
+        gcloud --quiet auth configure-docker europe-west1-docker.pkg.dev
+
+  # Get the GKE credentials so we can deploy to the cluster
+    - uses: google-github-actions/get-gke-credentials@db150f2cc60d1716e61922b832eae71d2a45938f
+      with:
+        cluster_name: ${{ env.GKE_CLUSTER }}
+        location: ${{ env.GKE_ZONE }}
+        credentials: ${{ secrets.GKE_SA_KEY }}
 
     # Setup gcloud CLI
     # - uses: google-github-actions/setup-gcloud@1bee7de035d65ec5da40a31f8589e240eba8fde5
@@ -69,16 +76,7 @@ jobs:
 
     # # Configure Docker to use the gcloud command-line tool as a credential
     # # helper for authentication
-    - run: |-
-        gcloud --quiet auth configure-docker
-        gcloud auth configure-docker europe-west1-docker.pkg.dev
 
-    # Get the GKE credentials so we can deploy to the cluster
-    - uses: google-github-actions/get-gke-credentials@db150f2cc60d1716e61922b832eae71d2a45938f
-      with:
-        cluster_name: ${{ env.GKE_CLUSTER }}
-        location: ${{ env.GKE_ZONE }}
-        credentials: ${{ secrets.GKE_SA_KEY }}
 
     # # Build the Docker image
     # - name: Build and push Docker image
@@ -88,7 +86,7 @@ jobs:
     #     file: ./ARCH-adservice/Dockerfile
     #     push: true
     #     tags: "gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA"
-    #  labels: ${{ steps.meta.outputs.labels }}
+    #  labels: {{ steps.meta.outputs.labels }}
 
     # - name: Build
     #   run: |-
