--- a/.github/workflows/deploy-kub.yaml
+++ b/.github/workflows/deploy-kub.yaml
@@ -15,8 +15,6 @@ on:
     branches:
       - main
 
-permissions:
-  id-token: write
 
 # env:
 #   PROJECT_ID:
@@ -31,6 +29,9 @@ jobs:
   setup-build-publish-deploy:
     name: Setup, Build, Publish, and Deploy
     runs-on: ubuntu-latest
+    permissions:
+      contents: 'read'
+      id-token: 'write'
 
     steps:
     - name: Checkout
@@ -50,18 +51,18 @@ jobs:
         gcloud --quiet auth configure-docker
         gcloud --quiet auth configure-docker europe-west1-docker.pkg.dev
 
-  # Get the GKE credentials so we can deploy to the cluster
-    - uses: google-github-actions/get-gke-credentials@db150f2cc60d1716e61922b832eae71d2a45938f
-      with:
-        cluster_name: app-cluster
-        location: europe-west1
-        # credentials: {{ secrets.GKE_SA_KEY }}
+  # # Get the GKE credentials so we can deploy to the cluster
+  #   - uses: google-github-actions/get-gke-credentials@db150f2cc60d1716e61922b832eae71d2a45938f
+  #     with:
+  #       cluster_name: app-cluster
+  #       location: europe-west1
+  #       # credentials: {{ secrets.GKE_SA_KEY }}
 
     # Setup gcloud CLI
-    # - uses: google-github-actions/setup-gcloud@1bee7de035d65ec5da40a31f8589e240eba8fde5
-    #   with:
-    #     service_account_key: {{ secrets.GKE_SA_KEY }}
-    #     project_id: {{ secrets.GKE_PROJECT }}
+    - uses: google-github-actions/setup-gcloud@1bee7de035d65ec5da40a31f8589e240eba8fde5
+      with:
+        service_account_key: ${{ secrets.GKE_SA_KEY }}
+        project_id: ${{ secrets.GKE_PROJECT }}
 
     - name: push to gcr
       uses: RafikFarhad/push-to-gcr-github-action@v5-beta
@@ -70,7 +71,7 @@ jobs:
         project_id: taibi-samira
         image_name: reg-flask/app_flask
         image_tag: ${{github.sha}}
-        dockerfile: Dockerfile.main
+        dockerfile: ./Dockerfile.main
         context: .
 
 
