--- a/.github/workflows/deploy-kub.yaml
+++ b/.github/workflows/deploy-kub.yaml
@@ -49,7 +49,7 @@ jobs:
     # # helper for authentication
     - run: |-
         gcloud --quiet auth configure-docker
-        gcloud --quiet auth configure-docker europe-west1-docker.pkg.dev
+    # gcloud --quiet auth configure-docker europe-west1-docker.pkg.dev
 
   # # Get the GKE credentials so we can deploy to the cluster
   #   - uses: google-github-actions/get-gke-credentials@db150f2cc60d1716e61922b832eae71d2a45938f
@@ -59,7 +59,7 @@ jobs:
   #       # credentials: {{ secrets.GKE_SA_KEY }}
 
     # Setup gcloud CLI
-    - uses: google-github-actions/setup-gcloud@1bee7de035d65ec5da40a31f8589e240eba8fde5
+    - uses: google-github-actions/setup-gcloud@v0
       with:
         service_account_key: ${{ secrets.GKE_SA_KEY }}
         project_id: ${{ secrets.GKE_PROJECT }}
