--- a/.github/workflows/deploy-kub.yaml
+++ b/.github/workflows/deploy-kub.yaml
@@ -59,10 +59,10 @@ jobs:
   #       # credentials: {{ secrets.GKE_SA_KEY }}
 
     # Setup gcloud CLI
-    - uses: google-github-actions/setup-gcloud@v0
-      with:
-        service_account_key: ${{ secrets.GKE_SA_KEY }}
-        project_id: ${{ secrets.GKE_PROJECT }}
+    # - uses: google-github-actions/setup-gcloud@v0
+    #   with:
+    #     service_account_key: {{ secrets.GKE_SA_KEY }}
+    #     project_id: {{ secrets.GKE_PROJECT }}
 
     - name: push to gcr
       uses: RafikFarhad/push-to-gcr-github-action@v5-beta
@@ -77,30 +77,6 @@ jobs:
 
     # # Configure Docker to use the gcloud command-line tool as a credential
     # # helper for authentication
-
-
-    # # Build the Docker image
-    # - name: Build and push Docker image
-    #   uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
-    #   with:
-    #     context: .
-    #     file: ./ARCH-adservice/Dockerfile
-    #     push: true
-    #     tags: "gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA"
-    #  labels: {{ steps.meta.outputs.labels }}
-
-    # - name: Build
-    #   run: |-
-    #     docker build  \
-    #       --tag "gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA" \
-    #       --build-arg GITHUB_SHA="$GITHUB_SHA" \
-    #       --build-arg GITHUB_REF="$GITHUB_REF" \
-    #       .
-
-    # Push the Docker image to Google Container Registry
-    # - name: Publish
-    #   run: |-
-    #     docker push "gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA"²
 
     # Set up kustomize
     - name: Set up Kustomize
