--- a/.github/workflows/terradeploy.yml
+++ b/.github/workflows/terradeploy.yml
@@ -34,7 +34,7 @@ jobs:
       run:
         shell: bash
             #Inform a working directory if .tf files are not in root folder
-        working-directory: terraform
+        working-directory: /terraform
 
     steps:
       - name: Terraform Init
@@ -47,7 +47,7 @@ jobs:
 
 
       - name: Terraform Apply
-      
+
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         run: terraform apply -auto-approve -input=false
 
