--- a/.github/workflows/terradeploy.yml
+++ b/.github/workflows/terradeploy.yml
@@ -34,7 +34,7 @@ jobs:
       run:
         shell: bash
             #Inform a working directory if .tf files are not in root folder
-        working-directory: /terraform
+        working-directory: ./terraform
 
     steps:
       - name: Terraform Init
