--- a/.github/workflows/terradeploy.yml
+++ b/.github/workflows/terradeploy.yml
@@ -41,6 +41,7 @@ jobs:
         uses: hashicorp/setup-terraform@v1
       #with:
       #  cli_config_credentials_token: {{ secrets.TF_API_TOKEN }}
+
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
       - name: Terraform Init
         uses: hashicorp/terraform-github-actions@master
@@ -48,10 +49,10 @@ jobs:
           tf_actions_version: 1.5.2
           tf_actions_subcommand: 'init'
           tf_actions_working_dir: '.'
-          tf_actions_comment: true
+          tf_actions_comment: false
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          
+          GOOGLE_CREDENTIALS: taibi-samira-b2411ac21c59.json
+
     # Generates an execution plan for Terraform
     # - name: Terraform Plan
     #   run: terraform plan
