--- a/.github/workflows/terradeploy.yml
+++ b/.github/workflows/terradeploy.yml
@@ -44,14 +44,9 @@ jobs:
 
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
       - name: Terraform Init
-        uses: hashicorp/terraform-github-actions@master
-        with:
-          tf_actions_version: 1.5.2
-          tf_actions_subcommand: 'init'
-          tf_actions_working_dir: '.'
-          tf_actions_comment: false
+        run: terraform init
         env:
-          GOOGLE_CREDENTIALS: taibi-samira-b2411ac21c59.json
+          GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS}}
 
     # Generates an execution plan for Terraform
     # - name: Terraform Plan
