--- a/.github/workflows/terradeploy.yml
+++ b/.github/workflows/terradeploy.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Terraform Init
         run: terraform init
         env:
-          GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS}}
+          GOOGLE_CREDENTIALS: ${{secrets.GKE_SA_KEY}}
 
     # Generates an execution plan for Terraform
     # - name: Terraform Plan
