--- a/.github/workflows/terradeploy.yml
+++ b/.github/workflows/terradeploy.yml
@@ -41,7 +41,8 @@ jobs:
         uses: hashicorp/setup-terraform@v1
       #with:
       #  cli_config_credentials_token: {{ secrets.TF_API_TOKEN }}
-
+      - name: Gcloud login
+        run: gcloud auth application-default login
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
       - name: Terraform Init
         run: terraform init
