--- a/.github/workflows/terradeploy.yml
+++ b/.github/workflows/terradeploy.yml
@@ -58,5 +58,5 @@ jobs:
 
       - name: Terraform Apply
         id: tf_apply
-        run: terraform apply 
+        run: terraform apply -auto-approve -input=false
 
