--- a/.github/workflows/terradeploy.yml
+++ b/.github/workflows/terradeploy.yml
@@ -40,7 +40,11 @@ jobs:
             workload_identity_provider: '${{ secrets.WIF_PROVIDER }}'
             service_account: '${{ secrets.WIF_SERVICE_ACCOUNT }}'
 
-
+      - name: 'Authenticate to Google Cloud'
+        id: auth2
+        uses: google-github-actions/auth@v0
+        with:
+          credentials_json: ${{secrets.GKE_SA_KEY}}
     # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
@@ -59,4 +63,3 @@ jobs:
       - name: Terraform Apply
         id: tf_apply
         run: terraform apply -auto-approve -input=false
-
