--- a/.github/workflows/terradeploy.yml
+++ b/.github/workflows/terradeploy.yml
@@ -45,6 +45,12 @@ jobs:
         uses: google-github-actions/auth@v0
         with:
           credentials_json: ${{secrets.GKE_SA_KEY}}
+
+      - name: 'Storing SA Key to json file'
+        id: sa-config
+        run: |
+          echo ${{ secrets.GKE_SA_KEY }} | base64 -d > credentials.json
+          shell: bash
     # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
