--- a/.github/workflows/terradeploy.yml
+++ b/.github/workflows/terradeploy.yml
@@ -46,9 +46,9 @@ jobs:
         with:
           credentials_json: ${{secrets.GKE_SA_KEY}}
 
-      - name: 'Storing SA Key to json file'
-        id: sa-config
-        run: echo ${{ secrets.GKE_SA_KEY }} > credentials.json
+      # - name: 'Storing SA Key to json file'
+      #   id: sa-config
+      #   run: echo ${{ secrets.GKE_SA_KEY }} > credentials.json
 
     # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
       - name: Setup Terraform
@@ -67,4 +67,4 @@ jobs:
 
       - name: Terraform Apply
         id: tf_apply
-        run: terraform apply -auto-approve -input=false
+        run: terraform apply -auto-approve
