--- a/.github/workflows/terradeploy.yml
+++ b/.github/workflows/terradeploy.yml
@@ -36,7 +36,7 @@ jobs:
         id: 'auth'
         uses: 'google-github-actions/auth@v1'
         with:
-            create_credentials_file: 'true'
+            create_credentials_file: 'false'
             workload_identity_provider: '${{ secrets.WIF_PROVIDER }}'
             service_account: '${{ secrets.WIF_SERVICE_ACCOUNT }}'
 
